# LearnOpenGl

./: .gitignore  log.txt
camera/: CMakeLists.txt  main.cpp
colors/: CMakeLists.txt  camera.h  color.fs  color.vs  main.cpp
common/glad/include/glad/: glad.h
coordinate/: CMakeLists.txt  main.cpp
hello-triangle/: CMakeLists.txt  main.cpp
hello-window/: CMakeLists.txt  main.cpp
model-loading/: CMakeLists.txt  main.cpp  mesh.h  model.h  shader.h
shader/: CMakeLists.txt  main.cpp  shader_fs.glsl  shader_s.h  shader_vs.glsl
texture/: CMakeLists.txt  glad.c  main.cpp  texture_fs.glsl
transformations/: CMakeLists.txt  main.cpp  trans_vs.glsl  trans_vs_2.glsl
